# CJE_I_2025_OPAC

./: .dockerignore  .gitignore  README.md  alembic.ini  compose.yml  config.py  entrypoint.sh  install.sh  populate.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 2d55449b5de8_initial_migration_after_refactor.py  2ea706604bc6_initial_migration_with_batch_mode.py  dc916375ece1_create_database_schema.py
docker/api/: Dockerfile
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/: main.py  model.py
src/api/: search.py
src/db/: _convert.py  _model.py  crud.py  model.py  session.py
src/model/: record.py
src/xml_loader/: _parser.py  _schema.py  loader.py
