[project]
name = "cje-i-2025-opac-api"
version = "0.0.0"
description = "Repository for the OPAC development assignment in Knowledge Information Exercise I, University of Tsukuba, 2025."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiosqlite>=0.21.0",
  "alembic>=1.16.4",
  "fastapi>=0.116.1",
  "greenlet>=3.2.3",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "ruff>=0.12.3",
]

[tool.mypy]
strict = true
plugins = "sqlalchemy.ext.mypy.plugin"
exclude = ["alembic", "playground"]

[tool.ruff]
line-length = 88
exclude = ["alembic", "playground"]
